excalidraw-1/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidrawy-1
  namespace: excalidraw-1
spec:
  replicas: 1
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      app: excalidraw-1
  template:
    metadata:
      labels:
        app: excalidraw-1
    spec:
      tolerations:
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 30
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 30
      containers:
        - name: excalidrawy
          image: excalidraw/excalidraw:latest
          ports:
          - containerPort: 80
          livenessProbe:
            httpGet:
              path: / # Or the specific health check path for Suwayomi
              port: 80
            initialDelaySeconds: 60 # Give it time to boot
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "400m"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: excalidraw-1
  namespace: excalidraw-1
spec:
  type: ClusterIP
  selector:
    app: excalidraw-1
  ports:
  - port: 80
    targetPort: 80
